[gd_scene load_steps=3 format=3 uid="uid://bjv16f3io6fw3"]

[ext_resource type="Script" path="res://scenes/ants/bird_window.gd" id="1_mps5j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d4iih"]
size = Vector2(194, 173)

[node name="BirdWindow" type="Area2D"]
position = Vector2(98, 87)
script = ExtResource("1_mps5j")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -99.0
offset_top = 55.0
offset_right = 98.0
offset_bottom = 87.0
color = Color(0.144063, 0.144063, 0.144063, 1)
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="ClickRegionCollider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_d4iih")

[node name="GoblinCount" type="RichTextLabel" parent="."]
offset_left = -95.0
offset_top = 63.0
offset_right = 49.0
offset_bottom = 93.0
theme_override_font_sizes/normal_font_size = 10
text = "Garrisoned Goblins: 0"
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="AbortButton" type="Button" parent="."]
offset_left = 48.0
offset_top = 60.0
offset_right = 93.0
offset_bottom = 82.0
theme_override_font_sizes/font_size = 10
disabled = true
text = "Abort"
metadata/_edit_use_anchors_ = true

[node name="Countdown" type="RichTextLabel" parent="."]
offset_left = 52.0
offset_top = -84.0
offset_right = 92.0
offset_bottom = -44.0
bbcode_enabled = true
text = "[right]15"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="pressed" from="AbortButton" to="." method="_on_abort_button_pressed"]
